--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@ryancavanaugh/mcustomscrollbar": "^2.8.12-alpha",
         "axios": "^0.16.2",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.0.1",
-        "jquery": "^3.1.1",
+        "jquery": "^3.2.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "@types/mcustomscrollbar": "^2.8.32",
+        "bootstrap": "^3.3.7",
+        "bootstrap-tagsinput": "^0.7.1",
+        "jquery-mousewheel": "^3.1.13",
+        "modernizr": "^3.5.0",
+        "normalize.css": "^7.0.0",
+        "typeahead": "^0.2.2"
     }
 }
