--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "barryvdh/laravel-ide-helper": "^2.4",
+        "bestmomo/laravel-email-confirmation": "^1.1",
         "caouecs/laravel-lang": "~3.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
