--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "caouecs/laravel-lang": "~3.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "greggilbert/recaptcha": "dev-master"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
