--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
+    "/css/theme.css": "/css/theme.css",
     "/js/all.js": "/js/all.js",
-    "/css/all.css": "/css/all.css",
-    "/css/theme.css": "/css/theme.css"
+    "/css/all.css": "/css/all.css"
 }
